# nuts

./: .gitignore  CLAUDE.md  Cargo.toml  LICENSE  README.md  nuts_generated_user_10.json
.github/workflows/: ci.yml  release.yml
collections/: example.yaml
src/: completer.rs  config.rs  main.rs  models.rs  shell.rs
src/collections/: docs_generator.rs  manager.rs  mod.rs
src/commands/: ask.rs  call.rs  config.rs  discover.rs  explain.rs  fix.rs  generate.rs  mock.rs  mod.rs  monitor.rs  perf.rs  predict.rs  security.rs  test.rs
src/flows/: manager.rs  mod.rs
src/models/: analysis.rs  metrics.rs
src/services/: mock_data.rs
src/story/: mod.rs
templates/nextjs-docs/: package-lock.json  package.json  tailwind.config.js
templates/nextjs-docs/src/components/layout/: Header.tsx  Layout.tsx  Sidebar.tsx
templates/nextjs-docs/src/config/: api-config.ts
templates/nextjs-docs/src/pages/: _app.tsx  index.tsx
templates/nextjs-docs/src/styles/: globals.css
website/: README.md
website/src/app/: globals.css  layout.tsx  page.tsx
website/src/app/readme/: page.tsx
