[package]
name = "nuts"
version = "0.1.0"
edition = "2021"
authors = ["PimoussTO <pimouss@wellcode.ai>"]
description = "Nuts CLI tool"
license = "MIT"

[dependencies]
ratatui = "0.26.0" 
crossterm = "0.27.0"
inquire = "0.6.2"
syntect = "5.1.0"
console = "0.15.8"
dialoguer = "0.11.0"
clap = { version = "4.4", features = ["derive"] }
rustyline = "12.0.0"
reqwest = { version = "0.11", features = ["blocking", "json"] }
serde_json = "1.0"
anthropic = "0.0.8"
tokio = { version = "1.0", features = ["full"] }
dirs = "5.0"
serde = { version = "1.0", features = ["derive"] }
indicatif = "0.17"
serde_yaml = "0.9"
tokio-util = "0.7"
async-trait = "0.1"
termion = "2.0"
statistical = "1.0"

[[bin]]
name = "nuts"
path = "src/main.rs"